# StartFP

./: .gitignore  CMakeLists.txt  README.md  StartFP.sln  StartFP.vcxproj  StartFP.vcxproj.filters  resource.h  resources.rc
.github/workflows/: build-startfp-windows.yml  master-pull-request-checks.yml  master-pull-request-merge-reaction.yml  push-reaction.yml
src/: main.c  main.cpp  version.h
